Fixed underlines getting clipped in Firefox. Fixed font rendering thi… (#1372)
* Fixed underlines getting clipped in Firefox. Fixed font rendering thicker in Firefox

* Fixed underlines getting clipped in Firefox. Fixed font rendering thicker in Firefox [test-visual]

* [test-visual]

* Visuals not looking as expected in Percy. Trying again [test-visual]

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -2,6 +2,7 @@ html {
   font-size: $base;
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
